--- a/SimpleOAuth/SimpleOAuth.csproj
+++ b/SimpleOAuth/SimpleOAuth.csproj
@@ -47,11 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\Twitter.cs" />
     <Compile Include="Json\DynamicJsonObject.cs" />
     <Compile Include="OAuth\OAuthClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\OAuth\Client.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
