--- a/SimpleOAuth/SimpleOAuth.csproj
+++ b/SimpleOAuth/SimpleOAuth.csproj
@@ -48,11 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Implementations\Twitter.cs" />
     <Compile Include="Json\DynamicJsonObject.cs" />
     <Compile Include="OAuth\Helpers.cs" />
     <Compile Include="OAuth\OAuthClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Json\MockJavaScriptConverter.cs" />
     <Compile Include="Tests\OAuth\Client.cs" />
   </ItemGroup>
   <ItemGroup />
